--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "githubname",
+    "name": "jybbytloghyt",
     "description": "githubname",
     "keywords": ["vmess vless trojan shadowsocks socks"],
     "env": {
@@ -9,7 +9,7 @@
         },
         "AUUID": {
             "description": "UUID充当各个配置的路径和账号密码，建议修改和妥善保存,可生成UUID的网站: https://www.uuidgenerator.net",
-            "value": "66933154-8ac9-4e6b-9727-82ccb7646a49"
+            "value": "92903137-a139-457e-9fc7-e98202c9ac7d"
         },
         "CADDYIndexPage": {
             "description": "自定义CADDY部署完成后点击View的显示页面，参考readme.md中的（5：Caddy主页配置）",
